--- a/lib/polygeist/Passes/CMakeLists.txt
+++ b/lib/polygeist/Passes/CMakeLists.txt
@@ -32,6 +32,8 @@ add_mlir_dialect_library(MLIRPolygeistTransforms
   MLIRFuncDialect
   MLIRFuncTransforms
   MLIRGPUOps
+  MLIRGPUTransforms
+  MLIRGPUToNVVMTransforms
   MLIRIR
   MLIRLLVMDialect
   MLIRMathDialect
